samples/_failures_safe/1761398536_c5ea7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edd74268.c: In function ‘main’:
./samples/SAFE/__tmp_edd74268.c:165:5: error: expected expression at end of input
  165 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_edd74268.c:165:5: error: expected declaration or statement at end of input
